Realizando mapeamento de objeto relacional no Courier e AssignedDelivery

--- a/Microsservices/Courier-Management/src/main/resources/application.yml
+++ b/Microsservices/Courier-Management/src/main/resources/application.yml
@@ -1,1 +1,11 @@
-spring.application.name=Courier-Management
+spring:
+  application:
+    name: Courier-Management
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+  datasource:
+    url: jdbc:postgresql://localhost:5432/courierdb
+    username: postgres
+    password: aluno
